--- a/package.json
+++ b/package.json
@@ -5,15 +5,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@ethersproject/contracts": "^5.5.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/fortmatic-connector": "^6.1.6",
+    "@web3-react/frame-connector": "^6.0.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.10",
+    "@web3-react/walletlink-connector": "^6.2.8",
+    "axios": "^0.25.0",
+    "bignumber.js": "^9.0.2",
+    "cryptocurrency-icons": "^0.18.0",
+    "lodash": "^4.17.21",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "17.0.2",
+    "react-modal": "^3.14.4",
+    "react-select": "^5.2.2",
+    "rebass": "^4.0.7",
+    "styled-components": "^5.3.3",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "husky": "^7.0.4"
   }
 }
