--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ethersproject/contracts": "^5.5.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/frame-connector": "^6.0.9",
@@ -25,8 +26,10 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
     "rebass": "^4.0.7",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "web3": "^1.7.0"
   },
