--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.9",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
