--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bignumber.js": "^9.0.2",
     "cryptocurrency-icons": "^0.18.0",
     "lodash": "^4.17.21",
+    "muon": "github:muon-protocol/muon-client-js",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
