--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mrc721-ui",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3003",
     "lint": "next lint",
     "prepare": "husky install"
   },
